Fix case study banner repeating on mobile

--- a/source/sass/work-casestudies.sass
+++ b/source/sass/work-casestudies.sass
@@ -1,3 +1,9 @@
+.case-study-banner-container
+  background-position: center center
+  @media #{$small-only}
+    background-position: left center
+    background-size: cover
+
 .case-study-banner
   background-color: rgba(0, 0, 0, 0.25)
   background-position: center center
